# piec_old

./: CITATION.cff  LICENSE  README.md  docreqs.txt  setup.cfg
Drivers/: README.md  instrument.py
Notebooks/: README.md
src/Analysis/: README.md
src/Drivers/keysightdsox3024a/: core.py
src/PIEC/Analysis/: README.md
src/PIEC/Drivers/: README.md
src/PIEC/Drivers/keysightdsox3024a/: __init__.py  core.py
src/PIEC/GUIs/: README.md
src/PIEC/Measurement Waveforms/: README.md
src/PIEC/Notebooks/: README.md
src/PIEC/Testing/: driver_test.ipynb
src/piec/: _version.py  testing.ipynb
src/piec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/piec/drivers/: __init__.py  instrument.py  pymeasure_wrapper.py  testing.ipynb
src/piec/drivers/keysight81150a/: core.py
src/piec/drivers/keysightdsox3024a/: core.py
src/piec/measurement waveforms/: discrete_waveform.py
src/piec/measurement_waveforms/: discrete_waveform.py
src/piec/testing/: driver_test.ipynb
