[metadata]
name = piec
version = attr: piec._version.__version__
author = Geo Fratian
author_email = geo_fratian@brown.edu
description = A collection of control and analysis code for experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ElPsyKurisu/PIEC 
project_urls =
    Bug Tracker = https://github.com/ElPsyKurisu/PIEC/issues
	repository = https://github.com/ElPsyKurisu/PIEC
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
	pandas>=1.3.2
	numpy>=1.19.2
	matplotlib>=3.3.4
	scipy>=1.6.2
	pyvisa>=1.11.3
	IPython>=7.22.0
	igor>=0.3
	mcculw>=1.0.0
	pymeasure>=0.14.0
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* = *_notebook.ipynb