[metadata]
name = piec
version = attr: piec._version.__version__
author = Geo Fratian
author_email = geo_fratian@brown.edu
description = A collection of control and analysis code for experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ElPsyKurisu/piec 
project_urls =
    Bug Tracker = https://github.com/ElPsyKurisu/piec/issues
	repository = https://github.com/ElPsyKurisu/piec
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires = file: docreqs.txt
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* = *_notebook.ipynb